[package]
name = "clash-node-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
eframe = "0.28"
egui_extras = "0.28"
image = { version = "=0.25.9", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
