[package]
name = "clash-node-checker"
version = "1.5.9"
edition = "2021"

[dependencies]
aes = "0.8"
base64 = "0.22"
crc32fast = "1"
eframe = "0.28"
egui_extras = "0.28"
hysteria2 = "0.1.6"
image = { version = "=0.25.9", default-features = false }
md-5 = "0.10"
quinn = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "time"] }
